# YOLO-RescueSim

./: .gitignore  AUTO_NAVIGATION_README.md  LAUNCH_GUIDE.md  NAVIGATION_COMMANDS.md  NAVIGATION_SCRIPTS_README.md  README.md  WAYPOINT_RECORDER.md  WAYPOINT_SYSTEM.md  basics.md  build_project.sh  commands.md  installation.md  launch_sim.sh  requirements-yolo-venv.txt  ros.md  setup_navigation.sh
.github/: copilot-instructions.md
docs/: CUSTOM_MODELS.md  YOLO_SETUP.md  current-stack.md  gazebo.md  implementation.md  launch.md  llm_context.md  models.md  navigation.md  plan.md  setup.md  waypoints.md
project/: CMakeLists.txt  load_turtle_in_world.py  package.xml  setup.py  test.sdf  turtle.sdf  world.sdf
project/config/: rviz_config.rviz  turtlebot3_burger_bridge.yaml
project/launch/: complete_sim.launch.py  navigation_stack.launch.py  rescue_detection.launch.py  rescue_sim.launch.py
project/models/ground_plane/: model.config  model.sdf
project/models/turtlebot3_burger_with_camera/: model.sdf
project/models/walking_person_small/: model.config  model.sdf
project/navigation_scripts/: __init__.py
project/navigation_scripts/calibration/: __init__.py  coordinate_tracker.py  keyboard_controller.py  keyboard_controller_simple.py
project/navigation_scripts/navigation/: __init__.py  manual_record_demo.py  manual_record_waypoints.py  open_loop_waypoint_player.py  record_waypoints.py  simple_record_waypoints.py  test_movement.py  waypoint_navigator.py
project/project/: auto_navigation.py  fake_odom_player.py  human_tracker.py  map_exporter.py  nav_config.py  navigation_tester.py  offline_camera_publisher.py  yolo_detector.py
waypoints/: human_poses.csv  waypoints_arslan_recorded_2026-01-04.csv
