<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project</name>
  <version>0.0.1</version>
  <description>YOLO RescueSim - TurtleBot3 autonomous rescue simulation</description>
  <maintainer email="support@example.com">YOLO Rescue Sim</maintainer>
  <license>Apache-2.0</license>
  
  <url type="repository">https://github.com/yourusername/YOLO-RescueSim</url>
  <author email="support@example.com">YOLO Rescue Sim</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>

  
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
